# wikipedia_undumper

./: Cargo.toml  README.md
res/: medium.xml
src/: lib.rs  schema.rs
tests/: test_serialize_page.rs  tests.rs
