[package]
name = "wikipedia_undumper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.163", features=["derive"]}
quick-xml = {version="0.28.2", features=["serialize"]}
bzip2 = "0.4.4"
